# Evoting

./: .dockerignore  .env  .gitignore  ADMIN_PANEL_GUIDE.md  DOCKER_INSPECTION.md  Dockerfile.server  Dockerfile.trustee  Dockerfile.ttp  Dockerfile.voter  QUICKSTART.md  README.md  TEST_RESULTS.md  docker-compose.yml  rebuild-all.sh  test-voter-ui.sh
.claude/: settings.local.json
backend/: Cargo.toml  build.rs
backend/migrations/: .keep
backend/src/: main.rs
backend/src/handlers/: auth.rs  crypto_setup.rs  elections.rs  events.rs  keygen.rs  mod.rs  monitoring.rs  orchestration.rs  trustees.rs  voters.rs
backend/src/models/: crypto_params.rs  mod.rs
container-ui/: dkg_server.py  template.html  template_voter.html  web_server.py
container-ui/wasm/: did_wasm.d.ts  did_wasm.js  did_wasm_bg.wasm  did_wasm_bg.wasm.d.ts
crypto/: Makefile  README.md  aggregate.cpp  aggregate.h  blindsign.cpp  blindsign.h  checkkorverify.cpp  checkkorverify.h  didgen.cpp  didgen.h  dkg_cli.cpp  eVoting  ffi_wrapper.cpp  ffi_wrapper.h  keygen.cpp  keygen.h  keygen_parallel_backup.cpp  kor.cpp  kor.h  main.cpp  main_parallel_backup.cpp  pairinginverify.cpp  pairinginverify.h  params.txt  prepareblindsign.cpp  prepareblindsign.h  provecredential.cpp  provecredential.h  setup.cpp  setup.h  unblindsign.cpp  unblindsign.h
crypto/blindsign-wasm/: Dockerfile.simple  Dockerfile.wasm  Makefile  blindsign.js  blindsign.wasm  blindsign_simple.c  blindsign_wasm.c  build.sh  sha512.c  sha512.h
crypto/did-wasm/: Cargo.toml
crypto/did-wasm/src/: lib.rs
db/: init.sql
db/migrations/: 006_add_keygen_tables.sql
docker-images/trustee/: Dockerfile  trustee-server.sh
docker-images/ttp/: Dockerfile  ttp-server.sh
docker-images/voter/: Dockerfile  voter-server.sh
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/public/wasm/: did_wasm.d.ts  did_wasm.js  did_wasm_bg.wasm  did_wasm_bg.wasm.d.ts
frontend/src/: App.jsx
frontend/src/components/: Navbar.jsx
frontend/src/pages/: Dashboard.jsx  ElectionDetail.jsx  Elections.jsx  Login.jsx  Logs.jsx  Monitoring.jsx
frontend/src/services/: api.js
frontend/src/styles/: index.css
mnemonic/: README.md  README_NEW.md  TESTED_COMMANDS.md
mnemonic/BIP39/: Cargo.toml  README.md  README_OLD.md
mnemonic/BIP39/.claude/: settings.local.json
mnemonic/BIP39/examples/: cli_tool.rs  generate_wallet.rs  recover_wallet.rs
mnemonic/BIP39/src/: entropy.rs  error.rs  lib.rs  main.rs  mnemonic.rs  seed.rs  utils.rs  wallet.rs  wordlist.rs
mnemonic/PURE_BIP39/: Cargo.toml  LICENSE  QUICKSTART.md  README.md
mnemonic/PURE_BIP39/did_wasm/: Cargo.toml
mnemonic/PURE_BIP39/examples/: interactive.rs  quick_test.rs  simple.rs
mnemonic/PURE_BIP39/src/: entropy.rs  error.rs  lib.rs  mnemonic.rs  seed.rs  wordlist.rs
mnemonic/SHAMIR_SSS/: Cargo.toml  MANUAL_USAGE.md  README.md  TESTING.md
mnemonic/SHAMIR_SSS/examples/: basic_demo.rs  cli_tool.rs  interactive_test.rs
mnemonic/SHAMIR_SSS/src/: error.rs  galois.rs  lib.rs  mnemonic_share.rs  shamir.rs
mnemonic/SHAMIR_SSS/tests/: test_vectors.rs
mnemonic/SLIP39/: Cargo.toml  IMPLEMENTATION_VERIFICATION.md  README.md  TEST_RESULTS.md  check_test_vector.rs  debug_test_vector.py  test_digest_debug.rs  test_gf256.rs  test_output.txt
mnemonic/SLIP39/examples/: analyze_results.py  basic_demo.rs  check_test_vector.rs  check_vector17.py  compare_interpolation.py  compare_python.py  count_vectors.py  debug_interpolation.rs  debug_vector.rs  final_test_report.py  group_shares.rs  python_flow.py  test_digest_debug.rs  test_trezor_vec4.py
mnemonic/SLIP39/src/: cipher.rs  cipher_fixed.rs  cipher_old.rs  error.rs  lib.rs  rs1024.rs  shamir.rs  shamir.rs.backup  share.rs  slip39.rs  wordlist.rs
mnemonic/SLIP39/tests/: official_vectors.rs
scripts/: start-trustee.sh  start-ttp.sh  start-voter.sh
