[package]
name = "evoting-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.6", features = ["serde", "v4"] }

# Crypto (pinned versions to avoid edition2024 issues)
sha2 = "0.10"
hex = "0.4"
base64ct = "=1.6.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

# Docker API
bollard = "0.16"

# Environment
dotenv = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
