[package]
name = "did-wasm"
version = "0.1.0"
edition = "2021"
authors = ["E-Voting Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
pure-bip39 = { path = "../../mnemonic/PURE_BIP39" }
sha2 = "0.10"
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
curve25519-dalek = { version = "4", features = ["serde"] }
rand_core = { version = "0.6", features = ["getrandom"] }
num-bigint = "0.4"
num-traits = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
