[package]
name = "bip39-wallet"
version = "1.0.0"
edition = "2021"
authors = ["METU CENG"]
description = "Production-ready BIP-39 mnemonic wallet generator with HD derivation"
license = "MIT"
repository = "https://github.com/yourusername/bip39-wallet"
keywords = ["bitcoin", "bip39", "mnemonic", "wallet", "cryptocurrency"]
categories = ["cryptography", "cryptocurrencies"]

[dependencies]
# Core cryptography
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
secp256k1 = { version = "0.28", features = ["rand", "hashes"] }
bitcoin = "0.31"

# Randomness
rand = { version = "0.8", features = ["getrandom"] }
getrandom = "0.2"

# Encoding
hex = "0.4"
bs58 = "0.5"
base64 = "0.22"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utils
unicode-normalization = "0.1"
once_cell = "1.19"
zeroize = { version = "1.7", features = ["derive"] }  # Security: zero memory
chrono = "0.4"

# CLI
clap = { version = "4.4", features = ["derive"], optional = true }
colored = { version = "2.1", optional = true }
dialoguer = { version = "0.11", optional = true }
indicatif = { version = "0.17", optional = true }

# Optional features
tiny-hderive = { version = "0.3", optional = true }
ethereum-types = { version = "0.14", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3.8"
pretty_assertions = "1.4"

[features]
default = ["cli"]
cli = ["clap", "colored", "dialoguer", "indicatif"]
ethereum = ["ethereum-types", "tiny-hderive"]
all-languages = []

[[bin]]
name = "bip39-wallet"
required-features = ["cli"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[profile.dev]
opt-level = 0
debug = true