[package]
name = "pure-bip39"
version = "1.0.0"
edition = "2021"
authors = ["METU CENG"]
description = "Pure BIP-39 implementation - Only mnemonic generation and seed derivation"
license = "MIT"
repository = "https://github.com/yourusername/pure-bip39"
keywords = ["bip39", "mnemonic", "cryptocurrency"]
categories = ["cryptography", "no-std"]

[dependencies]
# Core cryptography - only what BIP39 requires
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["hmac"] }

# Randomness
rand = { version = "0.8", features = ["getrandom"] }
getrandom = "0.2"

# Encoding
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# Error handling
thiserror = "1.0"

# Utils
unicode-normalization = "0.1"
once_cell = "1.19"
zeroize = { version = "1.7", features = ["derive"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]
std = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
