[package]
name = "shamir-sss"
version = "1.0.0"
edition = "2021"
authors = ["METU CENG"]
description = "Shamir's Secret Sharing Scheme for BIP39 Mnemonics"
license = "MIT"
keywords = ["shamir", "secret-sharing", "mnemonic", "cryptography"]
categories = ["cryptography"]

[dependencies]
# Cryptography
sha2 = "0.10"
hmac = "0.12"

# Randomness
rand = { version = "0.8", features = ["getrandom"] }
getrandom = "0.2"

# Encoding
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Security
zeroize = { version = "1.7", features = ["derive"] }

# PURE_BIP39 integration
pure-bip39 = { path = "../PURE_BIP39" }

[dev-dependencies]
# For testing

[features]
default = ["std"]
std = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
